Fix: Remove dark mode toggle

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -36,47 +36,3 @@
   letter-spacing: 0.01em;
   transition: font-size var(--transition);
 }
-
-.Header__controls {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.Header__controls p {
-  display: none;
-}
-
-@media screen and (min-width: 29.0625em) {
-  .Header__controls p {
-    display: block;
-    font-size: 16px;
-  }
-}
-
-.Header__toggle {
-  --size: 20px;
-
-  width: var(--size);
-  height: var(--size);
-
-  background-size: contain;
-  background-position: center center;
-  background-color: transparent;
-  border: none;
-
-  aspect-ratio: 1 / 1;
-  cursor: pointer;
-  transition: transform 0.5s cubic-bezier(0.38, -0.47, 0.58, 1);
-}
-
-.Header__toggle[role="switch"][aria-checked="false"] {
-  background-image: url("./../../assets/moon-outline.svg");
-}
-
-.Header__toggle[role="switch"][aria-checked="true"] {
-  background-image: url("./../../assets/moon.svg");
-  background-color: black;
-
-  transform: rotate(360deg);
-}
